<resources>
    <string name="app_name">Filtered Hatebu</string>
    <string name="cancel">キャンセル</string>
    <string name="filter_candidate">フィルタを選択してください</string>
    <string name="add_filter_done">フィルタを追加しました</string>
    <string name="edit_filter">フィルタを編集</string>
    <string name="before_hours">%d時間前</string>
    <string name="before_minutes">%d分前</string>
    <string name="share_url">URLを共有</string>
    <string name="licenses">オープンソースライセンス表記</string>
    <string name="close">閉じる</string>
    <string name="move_to_the_site">サイトへ移動</string>
    <string name="add_filter">フィルタを追加</string>
    <string name="delete">削除</string>
    <string name="unset_filter">フィルタを解除</string>
    <string name="delete_filter">フィルタを解除しました</string>
    <string name="reload_feeds">更新</string>
    <string name="new_contents_dose_not_exist">新しい記事はありませんでした。</string>
    <string name="new_contents_fetched">新着記事</string>
    <string name="new_contents_count">%d件の新着記事を取得しました</string>
    <string name="got_comments">%d件のコメント</string>
    <string name="no_comments">コメントはありません</string>
    <string name="disallow_comments">コメント非表示設定の記事です</string>
    <string name="comments_title">はてなブックマークコメント</string>
    <string name="bottom_navigation_feed_list">記事一覧</string>
    <string name="bottom_navigation_favorite">お気に入り</string>
    <string name="bottom_navigation_settings">設定</string>
    <string name="bottom_navigation_filter">フィルタ管理</string>
    <string name="inbox_is_empty">未読の記事はありません</string>
    <string name="check_new_feed">新着記事をチェックする</string>
    <string name="archive">アーカイブ</string>
    <string name="archive_done">アーカイブしました</string>
    <string name="favorite_feed_is_empty">お気に入りの記事はまだありません</string>
    <string name="fetch_comment_error">コメント取得に失敗しました</string>
    <string name="retry">リトライ</string>
    <string name="checkbox_show_new_feed">新着記事を表示する</string>
    <string name="checkbox_show_archive_feed">アーカイブした記事を表示する</string>
    <string name="checkbox_show_favorite_feed">お気に入り記事を表示する</string>
    <string name="menu_feed_list_filter">表示する記事</string>
    <string name="filter_is_empty">フィルタは登録されていません</string>

    <string name="notification_channel_title_default">アプリからのお知らせ</string>
    <string name="notification_channel_description_default">アプリからの一般的な通知を表示するチャンネルです。</string>
    <string name="notification_channel_title_new_feed">新着記事のお知らせ</string>
    <string name="notification_channel_description_new_feed">新着記事を検知した場合にお知らせするチャンネルです。</string>
</resources>
